--- a/css/styles.css
+++ b/css/styles.css
@@ -601,6 +601,9 @@ progress {
 .img-fluid {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img-thumbnail {
